# django-dolt

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: publish.yml  test.yml
demo/: README.md  manage.py
demo/demo/: admin.py  routers.py  settings.py  urls.py  wsgi.py
demo/demo_app/: admin.py  apps.py  models.py  urls.py  views.py
demo/demo_app/management/commands/: setup_demo.py
demo/demo_app/migrations/: 0001_initial.py  0002_productcomment.py
demo/demo_app/static/demo_app/: style.css
demo/templates/: base.html
demo/templates/admin/: login.html
demo/templates/demo_app/: index.html  inventory.html  orders.html  product_detail.html
src/django_dolt/: __init__.py  admin.py  apps.py  decorators.py  dolt_databases.py  models.py  services.py
src/django_dolt/management/commands/: dolt_pull.py  dolt_push.py  dolt_status.py  dolt_sync.py
src/django_dolt/scripts/: release.py
src/django_dolt/templates/admin/django_dolt/: branch_changelist.html  change_form_dolt.html  commit_history.html  diff.html  pull.html  status.html
src/django_dolt/tests/: __init__.py  test_admin.py  test_commands.py  test_decorators.py  test_models.py  test_multi_db.py  test_services.py
tests/: conftest.py  settings.py
