[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-dolt"
version = "0.1.0"
description = "Django integration for Dolt version-controlled databases"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Myers Carpenter", email = "myers@mediabrainz.org" }]
keywords = ["django", "dolt", "version-control", "database"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Version Control",
]
dependencies = ["django>=5.0"]

[project.optional-dependencies]
dev = ["pytest", "pytest-django", "mypy", "ruff", "django-stubs"]

[project.urls]
Homepage = "https://github.com/mediabrainz/django-dolt"
Repository = "https://github.com/mediabrainz/django-dolt"

[tool.hatch.build.targets.wheel]
packages = ["src/django_dolt"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["src"]
