[project]
name = "django-dolt"
dynamic = ["version"]
description = "Django integration for Dolt version-controlled databases"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Myers Carpenter", email = "myers@mediabrainz.org"},
]
keywords = ["django", "dolt", "version-control", "database"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Software Development :: Version Control",
]
dependencies = ["django>=5.0"]

[project.urls]
Homepage = "https://github.com/myers/django-dolt"
Repository = "https://github.com/myers/django-dolt"
Issues = "https://github.com/myers/django-dolt/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/django_dolt/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/django_dolt"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["src", "."]
markers = []

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.5",
    "mypy>=1.0",
    "ruff>=0.4",
    "django-stubs>=5.0",
    "pymysql>=1.0",
]
demo = ["pymysql>=1.0"]
